--- a/CBayMobileApp.Android/CBayMobileApp.Android.csproj
+++ b/CBayMobileApp.Android/CBayMobileApp.Android.csproj
@@ -67,7 +67,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\BorderlessPickerRenderer.cs" />
     <Compile Include="Controls\CustomDatePickerRenderer.cs" />
+    <Compile Include="Controls\CustomEditorRenderer.cs" />
     <Compile Include="Controls\CustomEntryRenderer.cs" />
     <Compile Include="Controls\XEditorRenderer.cs" />
     <Compile Include="MainActivity.cs" />
@@ -238,6 +240,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\cbaywhitearrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\blank3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
