implement place order on cart items in cartOrderConfirmationViewModel

--- a/CBayMobileApp/CBayMobileApp.csproj
+++ b/CBayMobileApp/CBayMobileApp.csproj
@@ -114,6 +114,9 @@
     <EmbeddedResource Update="Views\Onboarding\Onboard.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Order\MyOrder.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Products\NewAddress.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
