implement referral code in RegisterViewModel

--- a/CBayMobileApp/CBayMobileApp.csproj
+++ b/CBayMobileApp/CBayMobileApp.csproj
@@ -69,6 +69,9 @@
     <EmbeddedResource Update="Views\Account\Downlines.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Account\InviteFriend.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Account\Membership.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
