--- a/CBayMobileApp.Android/CBayMobileApp.Android.csproj
+++ b/CBayMobileApp.Android/CBayMobileApp.Android.csproj
@@ -244,5 +244,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\blank3.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\newlogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cbayotp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
