--- a/CBayMobileApp.Android/Properties/AndroidManifest.xml
+++ b/CBayMobileApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.cbaymobileapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="1.1" package="com.yatice.cbays">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
     <application android:label="CBayMobileApp.Android" android:theme="@style/MainTheme"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
