--- a/CBayMobileApp/CBayMobileApp.csproj
+++ b/CBayMobileApp/CBayMobileApp.csproj
@@ -141,6 +141,9 @@
     <EmbeddedResource Update="Views\Products\OrderConfirmation.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Products\OrderConfirmationByID.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Products\ProductDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
